--- a/src/css/_styles.css
+++ b/src/css/_styles.css
@@ -134,41 +134,18 @@ body {
    
 }
 
-/* Fade between pages */
+/* Dialogs div */
 
-#fader {
+#dialog {
 
     position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 9999;
 
-    pointer-events: none;
-    background: #000000;
+    width: 50%;
+    height: 50%;
 
-    animation-duration: 500ms;
-    animation-timing-function: ease-in-out;
+    left: 25%;
+    bottom: 25%;
 
-}
+    background-color: red;
 
-@keyframes fade-out {
-    from { opacity: 1 }
-      to { opacity: 0 }
-}
-
-@keyframes fade-in {
-    from { opacity: 0 }
-      to { opacity: 1 }
-}
-
-#fader.fade-out {
-    opacity: 0;
-    animation-name: fade-out;
-}
-
-#fader.fade-in {
-    opacity: 1;
-    animation-name: fade-in;
 }
