--- a/src/css/start_hub.css
+++ b/src/css/start_hub.css
@@ -13,7 +13,7 @@
     height: 100%;
     width: calc(11em + 12vw);
     position: fixed;
-    z-index: 1;
+    z-index: 2;
     top: 0;
     right: 0;
 
@@ -51,18 +51,32 @@
     resize: top;
     overflow: auto;
     
-    height: 35%;
     width: calc(53.96em + 12vw);
     position: fixed;
     z-index: 0;
     bottom: 0;
     left: 0;
 
-    border-top: 1.5px solid var(--bars-border-2);
+    /* border-top: 1.5px solid var(--bars-border-2); */
     /*border-right: 1.5px solid #414141; */
 
     background-color: var(--bars-bg-2);
     overflow-x: hidden;
     padding-top: 20px;
+
+}
+
+#resize-bar {
+
+    height: 0%;
+    width: calc(53.96em + 12vw);
+    position: fixed;
+    z-index: 1;
+
+    background-color: var(--bars-border-2);
+
+    padding-top: 5px;
+
+    cursor: n-resize;
 
 }
