Add support for SVG images

--- a/src/css/start_hub.css
+++ b/src/css/start_hub.css
@@ -1,12 +1,15 @@
 :root {
 
-    --bars-bg-1: #333333;
-    --bars-text-1: #9ea5a5;
+    --bars-bg-1: #000000;
+    --bars-text-1: #000000;
 
-    --bars-border-2: #414141;
-    --bars-bg-2: #252526;
+    --bars-border-2: #000000;
+    --bars-bg-2: #000000;
+    --bars-text-2: #000000;
+    --bars-invert-2: 0;
 
 }
+
 
 #right-sidebar {
 
@@ -73,10 +76,72 @@
     position: fixed;
     z-index: 1;
 
-    background-color: var(--bars-border-2);
+    border-top: 2.5px solid var(--bars-border-2);
 
-    padding-top: 5px;
+    padding-top: 6px;
 
     cursor: n-resize;
 
+}
+
+#createnew_vector {
+
+    position: absolute;
+
+    top: 16%;
+
+    border: 1.5px solid var(--bars-border-2);
+
+    left: 38%;
+
+    width: 20%;
+    height: 25%;
+
+    background-color: var(--bars-bg-2)
+
+}
+
+#createnew_vector svg {
+
+    position: absolute;
+   
+    top: 2%;
+
+    left: 10%;
+    
+    width: 80%;
+    height: 80%;
+
+    filter: invert(var(--bars-invert-2));
+
+}
+
+
+#createnew_vector div {
+
+    position: absolute;
+
+    bottom: 10%;
+
+    text-align: center;
+
+    left: 14.5%;
+
+    font-size: 12px;
+
+    font-family: sans-serif;
+
+    color: var(--bars-text-2);
+
+}
+
+#createnew_vector:hover {
+
+    border: 1.5px solid #484848;
+    background-color: #2f2f2f;
+
+}
+
+#createnew_vector svg:hover {
+    filter: invert(0.18);
 }
