--- a/src/css/start_hub.css
+++ b/src/css/start_hub.css
@@ -97,7 +97,7 @@
 
     border: 1.5px solid var(--bars-border-2);
 
-    left: 38%;
+    left: 37.5%;
 
     width: 20%;
     height: 25%;
@@ -106,15 +106,15 @@
 
     cursor: pointer;
 
+    text-align: center;
+
 }
 
 #createnew_vector img {
 
-    position: absolute;
+    position: relative;
     
-    top: 2%;
-
-    left: 10%;
+    transform: translate(0%, 5%);
     
     width: 80%;
     height: 80%;
@@ -126,13 +126,9 @@
 
 #createnew_vector div {
 
-    position: absolute;
+    position: relative;
 
-    bottom: 10%;
-
-    text-align: center;
-
-    left: 17.75%;
+    transform: translate(0%, 0%);
 
     font-size: 12px;
 
@@ -175,16 +171,16 @@
 
     cursor: pointer;
 
+    text-align: center;
+
 }
 
 #createnew_pixel img {
 
-    position: absolute;
+    position: relative;
     
-    top: 2%;
+    transform: translate(0%, 5%);
 
-    left: 10%;
-    
     width: 80%;
     height: 80%;
 
@@ -195,13 +191,9 @@
 
 #createnew_pixel div {
 
-    position: absolute;
+    position: relative;
 
-    bottom: 10%;
-
-    text-align: center;
-
-    left: 17.75%;
+    transform: translate(0%, 0%);
 
     font-size: 12px;
 
